<?xml version="1.0"?>
<package>
  <name>RhAL</name>
  <version>0.0.0</version>
  <description>
    Rhoban hardware abstraction library. You can use it to interract
    with the supported devices.
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <maintainer email="rfabre@labri.fr">Rémi Fabre</maintainer>
  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Rhoban/RhAL</url>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>
  <author email="rfabre@labri.fr">Rémi Fabre</author>
  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>RhIOServer</build_depend> <!-- rhoban/rhio -->
  <build_depend>json</build_depend> <!-- rhobandeps/json -->
  <build_depend>serial</build_depend> <!-- rhobandeps/serial -->
  <build_depend>tclap</build_depend> <!-- rhobandeps/tclap -->
  <build_depend>Eigen</build_depend> <!-- rhobandeps/eigen -->

  <run_depend>RhIOServer</run_depend>
  <run_depend>json</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>tclap</run_depend>
  <run_depend>Eigen</run_depend>

</package>
